# drip

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  formatting.yml  static-analysis.yml  test.yml
cmake/: Cache.cmake  CompileCommands.cmake  CompilerWarnings.cmake  Cuda.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  Optimizations.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  Setup.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Utilities.cmake  VCEnvironment.cmake
doc/: simulation_config.schema.json
ext/imgui-cmake/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/app/: App.cpp  App.hpp  CMakeLists.txt  SystemSignalHandler.cpp  SystemSignalHandler.hpp  Window.cpp  Window.hpp  main.cpp
src/app/config/: JsonFileReader.hpp  Serializers.hpp
src/app/input/: KeyboardHandler.cpp  KeyboardHandler.hpp  MouseHandler.cpp  MouseHandler.hpp
src/app/mesh/: InvertedCube.cpp  InvertedCube.hpp
src/app/ui/: CameraHandler.cpp  CameraHandler.hpp  MovementHandler.cpp  MovementHandler.hpp  RotationHandler.cpp  RotationHandler.hpp  Window.cpp  Window.hpp
src/app/ui/panel/: StatisticsPanel.cpp  StatisticsPanel.hpp
src/app/utils/: FileReader.hpp  FrameTimeManager.cpp  FrameTimeManager.hpp  IntervalCache.hpp  Scene.cpp  Scene.hpp  Signals.hpp  SystemSignalHandler.cpp  SystemSignalHandler.hpp  Utils.hpp
src/common/: CMakeLists.txt
src/common/include/drip/common/: Logger.hpp
src/common/include/drip/common/log/: LogMessageBuilder.hpp  Logger.hpp
src/common/include/drip/common/log/sink/: ConsoleSink.hpp  FileSink.hpp  LogSink.hpp
src/common/include/drip/common/utils/: Assert.hpp  Signal.hpp  Timer.hpp  Utils.hpp
src/common/include/drip/common/utils/format/: ExceptionFormatter.hpp  GlmFormatter.hpp  StacktraceFormatter.hpp
src/common/src/: Logger.cpp
src/common/src/log/: LogMessageBuilder.cpp  Logger.cpp
src/common/src/log/sink/: ConsoleSink.cpp  FileSink.cpp
src/common/src/utils/: Timer.cpp
src/engine/: CMakeLists.txt
src/engine/config/: CMakeLists.txt  config.hpp.in
src/engine/include/drip/engine/: Window.hpp
src/engine/include/drip/engine/gui/: GuiManager.hpp  GuiPanel.hpp
src/engine/include/drip/engine/rendering/: Renderer.hpp
src/engine/include/drip/engine/rendering/system/: MeshRenderSystem.hpp  RenderSystem.hpp
src/engine/include/drip/engine/resource/: Mesh.hpp  MeshRenderable.hpp  Object.hpp  ParticlesRenderable.hpp  Renderable.hpp  Surface.hpp  Texture.hpp  Vertex.hpp
src/engine/include/drip/engine/scene/: Camera.hpp  Light.hpp  Scene.hpp
src/engine/include/drip/engine/utils/: Signals.hpp
src/engine/include/drip/engine/utils/format/: ResultFormatter.hpp
src/engine/include/drip/engine/vulkan/core/: Context.hpp
src/engine/shader/: CMakeLists.txt
src/engine/shader/fs/: Default.frag  Particles.frag
src/engine/src/gui/: GuiManager.cpp
src/engine/src/rendering/: FrameInfo.hpp  Renderer.cpp  Renderer.hpp  UboLight.hpp
src/engine/src/rendering/system/: DefaultRenderSystem.cpp  DefaultRenderSystem.hpp  GuiRenderSystem.cpp  GuiRenderSystem.hpp  MeshRenderSystem.cpp  MeshRenderSystem.hpp  ParticlesRenderSystem.cpp  ParticlesRenderSystem.hpp  RenderSystem.hpp
src/engine/src/resource/: Mesh.cpp  MeshRenderable.cpp  Object.cpp  ParticlesRenderable.cpp  Surface.cpp  Texture.cpp
src/engine/src/scene/: Camera.cpp  Scene.cpp
src/engine/src/utils/: Concepts.hpp
src/engine/src/vulkan/core/: Context.cpp  Device.cpp  Device.hpp  SwapChain.cpp  SwapChain.hpp
src/engine/src/vulkan/memory/: Alignment.hpp  Buffer.cpp  Buffer.hpp  Descriptor.cpp  Descriptor.hpp  SharedBuffer.cpp  SharedBuffer.hpp
src/engine/src/vulkan/pipeline/: CommandBuffer.cpp  CommandBuffer.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
src/gfx/: CMakeLists.txt
src/gfx/config/: CMakeLists.txt  config.hpp.in
src/gfx/include/drip/gfx/: Window.hpp
src/gfx/include/drip/gfx/gui/: GuiManager.hpp  GuiPanel.hpp
src/gfx/include/drip/gfx/resource/: Mesh.hpp  MeshRenderable.hpp  ParticlesRenderable.hpp  Renderable.hpp  Surface.hpp  Texture.hpp  Vertex.hpp
src/gfx/include/drip/gfx/scene/: Camera.hpp  Light.hpp  Scene.hpp
src/gfx/include/drip/gfx/utils/: Signals.hpp
src/gfx/include/drip/gfx/utils/format/: ResultFormatter.hpp
src/gfx/include/drip/gfx/vulkan/core/: Context.hpp
src/gfx/shader/vs/: Mesh.vert  Particles.vert  utils.glsl
src/gfx/src/gui/: GuiManager.cpp
src/gfx/src/rendering/: FrameInfo.hpp  Renderer.cpp  Renderer.hpp  UboLight.hpp
src/gfx/src/rendering/system/: GuiRenderSystem.cpp  GuiRenderSystem.hpp  MeshRenderSystem.cpp  MeshRenderSystem.hpp  ParticlesRenderSystem.cpp  ParticlesRenderSystem.hpp  RenderSystem.hpp
src/gfx/src/resource/: Mesh.cpp  MeshRenderable.cpp  ParticlesRenderable.cpp  Surface.cpp  Texture.cpp
src/gfx/src/scene/: Camera.cpp  Scene.cpp
src/gfx/src/utils/: Concepts.hpp
src/gfx/src/vulkan/core/: Context.cpp  Device.cpp  Device.hpp  SwapChain.cpp  SwapChain.hpp
src/gfx/src/vulkan/memory/: Alignment.hpp  Buffer.cpp  Buffer.hpp  Descriptor.cpp  Descriptor.hpp  SharedBuffer.cpp  SharedBuffer.hpp
src/gfx/src/vulkan/pipeline/: CommandBuffer.cpp  CommandBuffer.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
src/simulation/: CMakeLists.txt
src/simulation/include/drip/simulation/: Api.cuh  ExternalMemory.cuh  Simulation.cuh  SimulationConfig.cuh
src/simulation/src/: Algorithm.cu  CudaExternalMemory.cu  CudaExternalMemory.cuh  DeviceView.cuh  ExternalMemory.cu  NeighborGrid.cu  NeighborGrid.cuh  NeighborKernels.cu  NeighborKernels.cuh  Simulation.cu  SimulationParameters.cuh  Span.cuh  Sph.cu  Sph.cuh  SphKernels.cu  SphKernels.cuh  Utils.cuh  WendlandKernel.cuh
tests/: .clang-tidy
tests/app/: CMakeLists.txt
tests/app/config/: JsonFileReaderTest.cpp  SerializersTest.cpp
tests/app/utils/: FrameTimeManagerTest.cpp  IntervalCacheTest.cpp  UtilsTest.cpp
(+2 files in other folders)
